hermes_fuzz_executed/fuzz_96_execution
'use strict';

Object.prototype.async = function () {
    return new Promise((resolve, reject) => {
        try {
            let func = async () => this.foo()
            resolve(func)
        } catch (ex) {
            reject(ex)
        }
    });
};

function f() {
    return 1;
}
f.prototype = objectLiteral;


Execution Output ------------------:
test.js:4:16: warning: the variable "Promise" was not declared in anonymous function ""
    return new Promise((resolve, reject) => {
               ^~~~~~~
test.js:6:24: error: async functions are unsupported
            let func = async () => this.foo()
                       ^~~~~~~~~~~~~~~~~~~~~~
test.js:17:15: warning: the variable "objectLiteral" was not declared in function "global"
f.prototype = objectLiteral;
              ^~~~~~~~~~~~~
Emitted 1 errors. exiting.
